deploy/minio/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sounds
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  rules:
    - host: sounds
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: minio
                port:
                  number: 9000
